--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2019-06-03
 Author: Alexis Robert
 Maintainer: Alexis Robert <alexis3.robert3@gmail.com>
 Description: First test of a description, to be modified later.
-License: GPL (>= 2)
+License: MIT
 Imports: 
     Rcpp,
     methods,
