Edit doc and minor edits

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,12 @@ Date: 2019-06-03
 Author: Alexis Robert
 Maintainer: Alexis Robert <alexis3.robert3@gmail.com>
 Description: First test of a description, to be modified later.
-License: MIT
+License: MIT + file LICENSE
 Imports: 
     Rcpp,
     methods,
     stats,
     grDevices,
-    Rcpp,
     ape,
     ggplot2,
     magrittr,
