--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(ggplot2,scale_y_discrete)
 importFrom(grDevices,xyTable)
 importFrom(graphics,plot)
 importFrom(stats,median)
+importFrom(stats,quantile)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(measlesoutbreaker, .registration = TRUE)
