--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(custom_priors)
 export(outbreaker)
 export(outbreaker_data)
 export(pre_clustering)
+import(data.table)
 importFrom(Rcpp,evalCpp)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
