Rename package "o2geosocial"

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: measlesoutbreaker
+Package: o2geosocial
 Type: Package
 Title: Inference and reconstruction of measles transmission chains
 Version: 1.0
