--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,4 @@ importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(utils,head)
 importFrom(utils,tail)
-useDynLib(measlesoutbreaker, .registration = TRUE)
+useDynLib(o2geosocial, .registration = TRUE)
