--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(grDevices,xyTable)
 importFrom(graphics,plot)
+importFrom(stats,aggregate)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(utils,head)
