--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,9 @@ importFrom(geosphere,distGeo)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
