--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: o2geosocial
 Type: Package
 Title: Inference and Reconstruction of Transmission Chains During Outbreaks
 Version: 1.0
-Date: 2020-05-27
+URL: https://github.com/alxsrobert/o2geosocial
 Authors@R: c(person("Alexis", "Robert", email = "alexis.robert@lshtm.ac.uk", role = c("aut", "cre")),
 		    person("Sebastian", "Funk", email = "sebastian.funk@lshtm.ac.uk", role = c("aut")),
 		    person("Adam J", "Kucharski", email = "adam.kucharski@lshtm.ac.uk", role = c("aut")))
