--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,6 @@ Imports:
     methods,
     stats,
     grDevices,
-    knitr,
     ape,
     geosphere,
     ggplot2,
@@ -28,6 +27,8 @@ LinkingTo: Rcpp
 RoxygenNote: 7.1.0
 Suggests: 
     testthat, 
+    knitr,
+    rmarkdown,
     sf,
     socialmixr,
     rmarkdown
