--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person("Alexis", "Robert", email = "alexis.robert@lshtm.ac.uk", rol
 		    person("Sebastian", "Funk", email = "sebastian.funk@lshtm.ac.uk", role = c("aut")),
 		    person("Adam J", "Kucharski", email = "adam.kucharski@lshtm.ac.uk", role = c("aut")))
 Maintainer: Alexis Robert <alexis.robert@lshtm.ac.uk>
-Description: Bayesian reconstruction of transmission chains combining routinely-collected surveillance data such as genotype, age specific social contacts, distance between cases and onset dates. (Robert A, Kucharski AJ, Gastanaduy PA, Paul P, Funk S. 2020 Pre-print: <doi:10.1101/2020.02.13.20020891> ; under review (2020)).
+Description: Bayesian reconstruction of who infected whom during past outbreaks using routinely-collected surveillance data. Inference of transmission trees using genotype, age specific social contacts, distance between cases and onset dates of the reported cases. (Robert A, Kucharski AJ, Gastanaduy PA, Paul P, Funk S. 2020 Pre-print: <doi:10.1101/2020.02.13.20020891> ; in press at the Journal of the Royal Society Interface (2020)).
 License: MIT + file LICENSE
 Imports: 
     Rcpp,
