Add codecov, add travis badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,10 @@ apt_packages:
   - gdal-bin
   - libgdal1-dev
 
-
 warnings_are_errors: false
+
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
