--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: o2geosocial
 Type: Package
-Title: Inference and Reconstruction of Transmission Chains During Outbreaks
+Title: Reconstruction of Transmission Chains During Outbreaks
 Version: 1.0
 URL: https://github.com/alxsrobert/o2geosocial
 Encoding: UTF-8
-Authors@R: c(person("Alexis", "Robert", email = "alexis.robert@lshtm.ac.uk", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4516-2965")),
-		    person("Sebastian", "Funk", email = "sebastian.funk@lshtm.ac.uk", role = c("aut")),
-		    person("Adam J", "Kucharski", email = "adam.kucharski@lshtm.ac.uk", role = c("aut")))
+Authors@R: c(person("Alexis", "Robert", email = "alexis.robert@lshtm.ac.uk", role = c("aut", "cre", "cph"), comment = c(ORCID = "0000-0002-4516-2965")),
+		    person("Sebastian", "Funk", email = "sebastian.funk@lshtm.ac.uk", role = c("aut"), comment = c(ORCID = "0000-0002-2842-3406")),
+		    person("Adam J", "Kucharski", email = "adam.kucharski@lshtm.ac.uk", role = c("aut"), comment = c(ORCID = "0000-0001-8814-9421")))
 Maintainer: Alexis Robert <alexis.robert@lshtm.ac.uk>
 Description: Bayesian reconstruction of who infected whom during past outbreaks using routinely-collected surveillance data. Inference of transmission trees using genotype, age specific social contacts, distance between cases and onset dates of the reported cases. (Robert A, Kucharski AJ, Gastanaduy PA, Paul P, Funk S. 2020 Pre-print: <doi:10.1101/2020.02.13.20020891> ; in press at the Journal of the Royal Society Interface (2020)).
 License: MIT + file LICENSE
