Remove function bind_to_function, call from outbreaker2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     ggplot2,
     magrittr,
     visNetwork,
-    data.table
+    data.table,
+    outbreaker2
 LazyData: true  
 Depends: R(>= 3.5.0)
 LinkingTo: Rcpp
