--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(grDevices,xyTable)
 importFrom(graphics,plot)
+importFrom(outbreaker2,bind_to_function)
 importFrom(stats,aggregate)
 importFrom(stats,median)
 importFrom(stats,quantile)
