--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,9 @@ importFrom(ggplot2,scale_size_area)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(grDevices,xyTable)
+importFrom(graphics,abline)
+importFrom(graphics,legend)
+importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(outbreaker2,bind_to_function)
 importFrom(stats,aggregate)
